# mcqgen

./: .gitignore  README.md  StreamlitApp.py  pyproject.toml  requirements.txt  response.json
experiment/: data.txt  mcq.ipynb
src/mcqgenerator/: logger.py  test.py  utils.py
src/mcqgenerator/rag/: chunker.py  embeddings.py  loader.py
